# VoxelEngine

./: .gitignore  Cargo.toml  IDEAS.md  NOTES.md  README.md  teapot.vox
engine_core/: Cargo.toml
engine_core/src/: camera.rs  compute.rs  main.rs  mesh.rs  rasterizer.rs  shader.rs  ui.rs  vox_loader.rs
engine_core/src/shaders/: compute.glsl  fragment.glsl  passthrough_fragment_textured.glsl  passthrough_vertex.glsl  vertex.glsl
luminance-sdl2/: Cargo.toml
voxel_dag/: Cargo.toml
voxel_dag/src/: aabb.rs  dag.rs  lib.rs  octree.rs  voxel_data_structure.rs
